--- a/shop/templates/products/addproduct.html
+++ b/shop/templates/products/addproduct.html
@@ -21,7 +21,7 @@
             <select name = "brand" id = "brand" class="form-control" required>
                 <option value = "">Select Brand</option>
                 {% for brand in brands %}
-                <option value = "brand.id">{{brand.name}}</option>
+                <option value = "{{brand.id}}">{{brand.name}}</option>
                 {% endfor %}
             </select>
 
@@ -29,7 +29,7 @@
             <select name = "category" id = "category" class="form-control" required>
                 <option value = "">Select Category</option>
                 {% for category in categories %}
-                <option value = "category.id">{{category.name}}</option>
+                <option value = "{{category.id}}">{{category.name}}</option>
                 {% endfor %}
             </select>
 
