--- a/shop/templates/admin/brand.html
+++ b/shop/templates/admin/brand.html
@@ -48,7 +48,7 @@
     <tr>
       <th scope="row">{{loop.index}}</th>
       <td>{{brand.name}}</td>
-      <td><a href="" class = "btn btn-sm btn-outline-info" >Edit</a></td>
+      <td><a href="{{ url_for('updatebrand', id = brand.id)}}" class = "btn btn-sm btn-outline-info" >Edit</a></td>
        <td><a href="" class = "btn btn-sm btn-outline-danger">Delete</a></td>
     </tr>
   {% endfor%}
@@ -57,7 +57,7 @@
     <tr>
       <th scope="row">{{loop.index}}</th>
       <td>{{catgory.name}}</td>
-      <td><a href="" class = "btn btn-sm btn-outline-info" >Edit</a></td>
+      <td><a href="{{ url_for('updatecategory', id = catgory.id)}}" class = "btn btn-sm btn-outline-info" >Edit</a></td>
        <td><a href="" class = "btn btn-sm btn-outline-danger">Delete</a></td>
     </tr>
   {% endfor%}
