--- a/shop/templates/admin/index.html
+++ b/shop/templates/admin/index.html
@@ -57,8 +57,11 @@
       <td>
           <img src="{{url_for('static', filename= 'images/' + product.image_1)}}" width="50" height="50">
       </td>
-      <td>Edit</td>
-        <td>Delete</td>
+
+       <td> <a href="{{url_for('updateproduct', id=product.id)}}" class="btn btn-sm btn-info">Edit </a> </td>
+        <td>
+           <a class ="btn btn-sm btn-danger" href = "{{ url_for('updateproduct', id = product.id) }}" >Delete</a>
+        </td>
     </tr>
   {% endfor%}
   </tbody>
