--- a/shop/templates/admin/index.html
+++ b/shop/templates/admin/index.html
@@ -60,9 +60,35 @@
 
        <td> <a href="{{url_for('updateproduct', id=product.id)}}" class="btn btn-sm btn-info">Edit </a> </td>
         <td>
-           <a class ="btn btn-sm btn-danger" href = "{{ url_for('updateproduct', id = product.id) }}" >Delete</a>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal-{{product.id}}">
+              Delete
+            </button>
         </td>
     </tr>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal-{{product.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">{{product.name}}</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p class="text-danger">Are you sure to delete  brand <b>{{ product.name }}</b> ??</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <form action="{{url_for('deleteproduct',id=product.id)}}" method="post">
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
   {% endfor%}
   </tbody>
 </table>
