--- a/shop/templates/products/index.html
+++ b/shop/templates/products/index.html
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link disabled" href = "#">Cart({{session['Shoppingcart']|length}})</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -66,7 +66,18 @@
                     <div class="card-footer text-center">
                       <a href="{{ url_for('single_page', id = b.id) }}" class="btn btn-sm btn-primary pull-left" type="button" id="toleft">Details</a>
 
-                      <button class="btn btn-sm btn-warning pull-right" type="button" id="toright">Add to cart</button>
+                      <form action="{{url_for('AddCart')}}" method="post">
+                          <input type="hidden" name="product_id" value="{{b.id}}">
+                          <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                          <input type="hidden" name="quantity" value="1" min="1" max="20">
+                          {% set colors = b.colors.split(',') %}
+                          <select name="colors" id="colors" style="visibility: hidden;">
+                              {% for color in colors %}
+                              {% set col = color.split(':') %}
+                              <option value="{{col[0]}}">{{col[0] | capitalize }}</option>
+                              {% endfor %}
+                          </select>
+                      </form>
                     </div>
              </div>
         </div>
@@ -111,7 +122,18 @@
                     <div class="card-footer text-center">
                       <a href="{{ url_for('single_page', id = cat.id) }}" class="btn btn-sm btn-primary pull-left" type="button" id="toleft">Details</a>
 
-                      <button class="btn btn-sm btn-warning pull-right" type="button" id="toright">Add to cart</button>
+                      <form action="{{url_for('AddCart')}}" method="post">
+                          <input type="hidden" name="product_id" value="{{cat.id}}">
+                          <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                          <input type="hidden" name="quantity" value="1" min="1" max="20">
+                          {% set colors = cat.colors.split(',') %}
+                          <select name="colors" id="colors" style="visibility: hidden;">
+                              {% for color in colors %}
+                              {% set col = color.split(':') %}
+                              <option value="{{col[0]}}">{{col[0] | capitalize }}</option>
+                              {% endfor %}
+                          </select>
+                      </form>
                     </div>
              </div>
         </div>
@@ -155,8 +177,19 @@
                     <p class="text-center">{{ product.price }}</p>
                   </div>
                     <div class="card-footer text-center">
-                      <a href="{{ url_for('single_page', id = product.id) }}" class="btn btn-sm btn-primary pull-left" type="button" id="toleft">Details</a>
-                      <button class="btn btn-sm btn-warning pull-right" type="button" id="toright">Add to cart</button>
+                        <a href="{{url_for('single_page',id=product.id)}}" class="float-left btn btn-sm btn-primary">Details</a>
+                        <form action="{{url_for('AddCart')}}" method="post">
+                          <input type="hidden" name="product_id" value="{{product.id}}">
+                          <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                          <input type="hidden" name="quantity" value="1" min="1" max="20">
+                          {% set colors = product.colors.split(',') %}
+                          <select name="colors" id="colors" style="visibility: hidden;">
+                              {% for color in colors %}
+                              {% set col = color.split(':') %}
+                              <option value="{{col[0]}}">{{col[0] | capitalize }}</option>
+                              {% endfor %}
+                          </select>
+                      </form>
                     </div>
              </div>
         </div>
