--- a/shop/templates/products/single_page.html
+++ b/shop/templates/products/single_page.html
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link disabled" href = "#">Cart({{session['Shoppingcart']|length}})</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -58,21 +58,37 @@
         <h4> Product name: {{product.name}} </h4>
             <hr>
             <p>product price: Rs.{{product.price}}</p>
-            {% if product.price >0 %}
+            {% if product.discount >0 %}
             <p> Product Discount: {{ product.discount }} %</p>
             {% endif %}
+            <hr>
             <b> Product Details </b>
             <p>{{product.description }}</p>
+            <hr>
+            <form action="{{url_for('AddCart')}}" method="post">
+                <input type="hidden" name = "product_id" value="{{product.id}}">
+                <button type="submit" class="btn btn-sm btn-primary"> Add cart</button>
+                <label for="">Quantity:</label>
+                <input type="number" name ='quantity' id="" value="1" min="1" max="{{product.stock}}">
+                {% set colors = product.colors.split(',') %}
+                <label for="colors">Colors:</label>
+                <select name="colors" id="">
+                    {% for color in colors %}
+                        {% set col = color.split(':') %}
+                            <option value="{{ col[0] }}">{{col[0]|capitalize}}</option>
+                    {% endfor %}
+                </select>
+            </form>
         </div>
-         <div class="row">
+        <div class="row">
         <div class="col-md-12 mt-3" id='s_image'>
-            <img class="p-3" src="{{ url_for('static', filename = "images/" + product.image_1) }}", alt="{{product.name}}" ,width="120", height="120">
-            <img class="p-3" src="{{ url_for('static', filename = "images/" + product.image_2) }}", alt="{{product.name}}" ,width="120", height="120">
+            <hr>
             <img class="p-3" src="{{ url_for('static', filename = "images/" + product.image_3) }}", alt="{{product.name}}" ,width="120", height="120">
+            <img class="p-3" src="{{ url_for('static', filename = "images/" + product.image_2) }}", alt="{{product.name}}" ,width="120", height="120">
+            <img class="p-3" src="{{ url_for('static', filename = "images/" + product.image_1) }}", alt="{{product.name}}" ,width="120", height="120">
         </div>
     </div>
-</div>
-
+    </div>
 </div>
 
 <script>
@@ -87,6 +103,5 @@
         b_image.innerHTML = "<img src=" + ImageSRC + " width='400' height='400'>";
     }
 </script>
-
 
 {% endblock content %}
