--- a/shop/templates/products/single_page.html
+++ b/shop/templates/products/single_page.html
@@ -36,7 +36,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href = "#">Cart({{session['Shoppingcart']|length}})</a>
+              <a class="nav-link " href ="{{url_for('getCart')}}">Cart({{session['Shoppingcart']|length}})</a>
             </li>
           </ul>
           <form class="d-flex">
