Customer/ Login completed

--- a/shop/templates/customer/register.html
+++ b/shop/templates/customer/register.html
@@ -10,7 +10,8 @@
         </div>
         <div class="col-md-2"></div>
     </div>
-    <form action="" method="post">
+    <form action="" method="post" novalidate>
+        {{ form.csrf_token }}
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-4">
@@ -24,7 +25,6 @@
             </div>
             <div class="col-md-4">
                 {{ render_field(form.country,class="form-control") }}
-                {{ render_field(form.username,class="form-control") }}
                 {{ render_field(form.city,class="form-control") }}
                 {{ render_field(form.contact,class="form-control") }}
                 {{ render_field(form.address,class="form-control") }}
